# CommonWordFinder

./: Makefile  Makefile.am  Makefile.in  c++11 version  c++14 version  callgrind.out.11020  callgrind.out.2156  callgrind.out.7641  commonwordfinder  commonwordfinder-0.1.tar.xz  commonwordfinder.cpp  commonwordfinder_mmap  commonwordfinder_mmap.cpp  commonwordfinder_vector  commonwordfinder_vector.cpp  config.h  config.status  configure  configure.ac  mmap version  rbtree.h  testcwf.sh  tester  tester.cpp
.deps/: commonwordfinder.Po  commonwordfinder_mmap.Po  commonwordfinder_vector.Po  tester.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
commonwordfinder.dSYM/Contents/: Info.plist
commonwordfinder.dSYM/Contents/Resources/DWARF/: commonwordfinder
commonwordfinder_mmap.dSYM/Contents/: Info.plist
commonwordfinder_mmap.dSYM/Contents/Resources/DWARF/: commonwordfinder_mmap
commonwordfinder_vector.dSYM/Contents/: Info.plist
commonwordfinder_vector.dSYM/Contents/Resources/DWARF/: commonwordfinder_vector
