CXXFLAGS = -std=c++14 -g -Wall -pedantic -Werror

noinst_PROGRAMS = commonwordfinder commonwordfinder_vector commonwordfinder_mmap

COMMON = node.h rbtree.h tree.h treeprinter.h

commonwordfinder_SOURCES = commonwordfinder.cpp
commonwordfinder_vector_SOURCES = commonwordfinder_vector.cpp
commonwordfinder_mmap_SOURCES = commonwordfinder_mmap.cpp
