CXXFLAGS = -O3 -std=c++14 -g -Wall -pedantic -Werror

noinst_PROGRAMS = tester commonwordfinder commonwordfinder_vector commonwordfinder_mmap

COMMON = node.h rbtree.h tree.h treeprinter.h

commonwordfinder_SOURCES = COMMON commonwordfinder.cpp
commonwordfinder_vector_SOURCES = COMMON commonwordfinder_vector.cpp
commonwordfinder_mmap_SOURCES = COMMON commonwordfinder_mmap.cpp
tester_SOURCES = COMMON tester.cpp
